--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>MakerSpace</title>
 </head>
-<body>
+<body id="body">
     <div class="container">
         <div class="collum">
           <div class="col">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
               <a class="navbar-brand" id="logoHome" href="#">
-                <img src="image/robot-removebg-preview.png" width="60" height="60" class="d-inline-block align-top" alt="">
+                <img src="image/robot-removebg-preview.png" width="100" height="100" class="d-inline-block align-top" alt="">
                 <span>MakerSpace</span>
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -26,25 +26,14 @@
             
               <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
                 <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Ação</a>
-                      <a class="dropdown-item" href="#">Outra ação</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Algo mais aqui</a>
-                    </div>
+                    <a class="nav-link" href="#">Conteudos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Desativado</a>
+                    <a class="nav-link" href="#">Informações</a>
                   </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
