--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
             
-              <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-                <ul class="navbar-nav mr-auto">
+              <div class=" navTop collapse navbar-collapse" id="conteudoNavbarSuportado">
+                <ul  class="navbar-nav navTop">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="links" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Conteudos</a>
+                    <a class="links" href="#">Conteúdos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Informações</a>
+                    <a class="links" href="#">Informações</a>
+                  </li>
+                  <li class="nav-item">
+                    <button type="button" class="btn">Registrar</button>
+                  </li>
+                  <li class="nav-item">
+                    <button type="button" class="btn"><span>Entrar</span></button>
                   </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-                </form>
               </div>
             </nav>
           </div>
