--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="./style/home.css">
+    <link rel="stylesheet" href="./style/geral.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
 
