--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <a class="links" href="#">Informações</a>
                   </li>
                   <li class="nav-item">
-                    <button type="button" class="btn">Registrar</button>
+                    <button type="button" class="btn" onclick="window.location.href='./pages/registro.html'">Registrar</button>
                   </li>
                   <li class="nav-item">
-                    <button type="button" class="btn"><span>Entrar</span></button>
+                    <button type="button" class="btn" onclick="window.location.href='./pages/login.html'"><span>Entrar</span></button>
                   </li>
                 </ul>
               </div>
