--- a/pages/registro.html
+++ b/pages/registro.html
@@ -16,6 +16,34 @@
     <div class="container">
         <div class="collum" id="container-registro">
             <div class="col">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                  <a class="navbar-brand" id="logoHome" href="#">
+                    <img src="../image/robot-removebg-preview.png" width="100" height="100" class="d-inline-block align-top" alt="">
+                    <span>MakerSpace</span>
+                  </a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                
+                  <div class=" navTop collapse navbar-collapse" id="conteudoNavbarSuportado">
+                    <ul  class="navbar-nav navTop">
+                      <li class="nav-item">
+                        <a class="links" href="../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="links" href="#">Conteúdos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="links" href="#">Informações</a>
+                      </li>
+                      <li class="nav-item">
+                        <button type="button" class="btn" onclick="window.location.href='login.html'"><span>Entrar</span></button>
+                      </li>
+                    </ul>
+                  </div>
+                </nav>
+              </div>
+            <div class="col">
                 <h1>Cadastro de Usuário</h1>
             </div>
             <div class="col">
