--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="collum">
           <div class="col">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-xl navbar-light">
               <a class="navbar-brand" id="logoHome" href="#">
                 <img src="image/robot-removebg-preview.png" width="100" height="100" class="d-inline-block align-top" alt="">
                 <span>MakerSpace</span>
