--- a/pages/registro.html
+++ b/pages/registro.html
@@ -14,9 +14,9 @@
 </head>
 <body id="body">
     <div class="container">
-        <div class="collum" id="container-registro">
-            <div class="col">
-                <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="collum">
+        <div class="col">
+          <nav class="navbar navbar-expand-xl navbar-light">
                   <a class="navbar-brand" id="logoHome" href="#">
                     <img src="../image/robot-removebg-preview.png" width="100" height="100" class="d-inline-block align-top" alt="">
                     <span>MakerSpace</span>
@@ -41,51 +41,57 @@
                       </li>
                     </ul>
                   </div>
-                </nav>
+            </nav>
+        </div>
+      </div>
+
+        <div class="collum" id="Container-Registro">
+          <div class="col">
+            <img id="Imagem-Registro" src="../image/robot-removebg-preview.png" alt="">
+          </div>
+
+          <div class="col">
+            <h2 id="Title-Registro">Cadastro de Usuário</h1>
+          </div>
+
+          <div class="col">
+            <form>
+              <div class="form-group">
+                <label for="exampleNome">Nome:</label>
+                <input type="text" class="form-control" id="exampleNome" placeholder="Nome">
               </div>
-            <div class="col">
-                <h1>Cadastro de Usuário</h1>
-            </div>
-            <div class="col">
-                <img src="../image/robot-removebg-preview.png" alt="">
-            </div>
-            <div class="col">
-                <form>
-                    <div class="form-group">
-                        <label for="exampleNome">Nome:</label>
-                        <input type="text" class="form-control" id="exampleNome" placeholder="Nome">
-                      </div>
-                    <div class="form-group">
-                      <label for="exampleInputEmail1">Endereço de email</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-                      <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleLogin">Login:</label>
-                        <input type="text" class="form-control" id="exampleLogin" placeholder="Login">
-                      </div>
-                    <div class="form-group">
-                      <label for="exampleInputPassword1">Senha:</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                    <div class="form-group">
-                        <label for="exampleInputPassword2">Confirmação de Senha:</label>
-                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirmação de Senha">
-                      </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-                  </form>
-            </div>
+
+              <div class="form-group">
+                <label for="exampleInputEmail1">Endereço de email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+                <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+              </div>
+
+              <div class="form-group">
+                <label for="exampleLogin">Login:</label>
+                <input type="text" class="form-control" id="exampleLogin" placeholder="Login">
+              </div>
+
+              <div class="form-group">
+                <label for="exampleInputPassword1">Senha:</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+              </div>
+
+              <div class="form-group">
+                <label for="exampleInputPassword2">Confirmação de Senha:</label>
+                <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirmação de Senha">
+              </div>
+
+              <button id="Botao-Registro" type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+          </div> 
         </div>
     </div>
-
-
-
-
-
     <!--JavaScript(Opcional)-->
     <!--JQuery primeiro, depois Popper.js, depois BootStrap JS-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="../script/registro.js"></script>
 </body>
 </html>
