--- a/pages/login.html
+++ b/pages/login.html
@@ -10,7 +10,7 @@
 
     <!--BootStrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>MakerSpace - Registro</title>
+    <title>MakerSpace - Login</title>
 </head>
 <body id="body">
     <div class="container">
@@ -37,7 +37,7 @@
                         <a class="links" href="#">Informações</a>
                       </li>
                       <li class="nav-item">
-                        <button type="button" class="btn" onclick="window.location.href='login.html'"><span>Entrar</span></button>
+                        <button type="button" class="btn" onclick="window.location.href='../pages/registro.html'"><span>Registrar</span></button>
                       </li>
                     </ul>
                   </div>
@@ -51,7 +51,7 @@
           </div>
 
           <div class="col">
-            <h2 id="Title-Registro">Cadastro de Usuário</h1>
+            <h2 id="Title-Registro">Inserir Credenciais</h1>
           </div>
 
           <div class="col">
@@ -66,7 +66,7 @@
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
               </div>
 
-              <button id="Botao-Registro" type="submit" class="btn btn-primary">Enviar</button>
+              <button id="Botao-Registro" type="submit" class="btn btn-primary">Inserir</button>
             </form>
           </div> 
         </div>
