--- a/pages/registro.html
+++ b/pages/registro.html
@@ -72,14 +72,16 @@
                 <input type="text" class="form-control" id="exampleLogin" placeholder="Login">
               </div>
 
-              <div class="form-group">
+              <div class="form-group" id="password1">
                 <label for="exampleInputPassword1">Senha:</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                <button class="toggle" type="button" onclick="togglePassword1(this)"></button>
               </div>
 
-              <div class="form-group">
+              <div class="form-group" id="password1">
                 <label for="exampleInputPassword2">Confirmação de Senha:</label>
                 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirmação de Senha">
+                <button class="toggle" type="button" onclick="togglePassword2(this)"></button>
               </div>
 
               <button id="Botao-Registro" type="submit" class="btn btn-primary">Enviar</button>
@@ -93,5 +95,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="../script/registro.js"> </script>
+    <script src="../script/visualizarSenha.js"></script>
 </body>
 </html>
