--- a/pages/login.html
+++ b/pages/login.html
@@ -58,12 +58,13 @@
             <form id="login-Form">
               <div class="form-group">
                 <label for="exampleLogin">Login:</label>
-                <input type="text" class="form-control" id="exampleLogin" placeholder="Login">
+                <input type="text" class="form-control" id="exampleLogin" placeholder="Login" required>
               </div>
 
-              <div class="form-group">
-                <label for="exampleInputPassword1">Senha:</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+              <div class="form-group" id="password">
+                <label for="passwordLogin">Senha:</label>
+                <input type="password" class="form-control" id="passwordLogin" placeholder="Senha" required>
+                <button class="toggle" type="button" onclick="togglePassword3(this)"></button>
               </div>
 
               <button id="Botao-Registro" type="submit" class="btn btn-primary">Inserir</button>
@@ -77,5 +78,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="module" src="../script/login.js"></script>
+    <script src="../script/visualizarSenha.js"></script>
 </body>
 </html>
