--- a/pages/registro.html
+++ b/pages/registro.html
@@ -58,29 +58,29 @@
             <form id="login-Form">
               <div class="form-group">
                 <label for="exampleNome">Nome:</label>
-                <input type="text" class="form-control" id="exampleNome" placeholder="Nome">
+                <input type="text" class="form-control" id="exampleNome" placeholder="Nome" required>
               </div>
 
               <div class="form-group">
                 <label for="exampleInputEmail1">Endereço de email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email" required>
                 <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
               </div>
 
               <div class="form-group">
                 <label for="exampleLogin">Login:</label>
-                <input type="text" class="form-control" id="exampleLogin" placeholder="Login">
+                <input type="text" class="form-control" id="exampleLogin" placeholder="Login" required>
               </div>
 
-              <div class="form-group" id="password1">
+              <div class="form-group" id="password">
                 <label for="exampleInputPassword1">Senha:</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha" required>
                 <button class="toggle" type="button" onclick="togglePassword1(this)"></button>
               </div>
 
-              <div class="form-group" id="password1">
+              <div class="form-group" id="password">
                 <label for="exampleInputPassword2">Confirmação de Senha:</label>
-                <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirmação de Senha">
+                <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirmação de Senha" required>
                 <button class="toggle" type="button" onclick="togglePassword2(this)"></button>
               </div>
 
