--- a/index.html
+++ b/index.html
@@ -35,11 +35,41 @@
                   <li class="nav-item">
                     <a class="links" href="#">Informações</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item" id="registro">
                     <button type="button" class="btn" onclick="window.location.href='./pages/registro.html'">Registrar</button>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item" id="entrar">
                     <button id="button-login" type="button" class="btn" onclick="window.location.href='./pages/login.html'"><span>Entrar</span></button>
+                  </li>
+                  <li class="nav-item" id="user-item">
+                    <p>
+                      <button type="button" id="user" data-toggle="collapse"  data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"></button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                      <div class="card card-body">
+                        <button id="ajuda">
+                          <span></span><span>Ajuda</span>
+                        </button>
+                        <button id="seguranca">
+                          <span></span><span>Segurança</span>
+                        </button>
+                        <button id="visibilidade">
+                          <span></span><span>Visibilidade</span>
+                        </button>
+                        <button id="privacidade">
+                          <span></span><span>Privacidade</span>
+                        </button>
+                        <button id="dados_usuario">
+                          <span></span><span>Dados da Conta</span>
+                        </button>
+                        <button id="excluir">
+                          <span></span><span>Excluir conta</span>
+                        </button>
+                        <button id="sair">
+                          <span></span><span>Encerrar Sessão</span>
+                        </button>
+                      </div>
+                    </div>
                   </li>
                 </ul>
               </div>
