--- a/pages/registro.html
+++ b/pages/registro.html
@@ -80,8 +80,11 @@
 
               <div class="form-group" id="password">
                 <label for="exampleInputPassword2">Confirmação de Senha:</label>
-                <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirmação de Senha" required>
+                <input type="password" class="form-control" id="exampleInputPassword2" aria-describedby="passwordHelp" placeholder="Confirmação de Senha" required>
                 <button class="toggle" type="button" onclick="togglePassword2(this)"></button>
+              </div>
+              <div class="form-group">
+                <small id="passwordHelp" class="form-text">teste</small>
               </div>
 
               <button id="Botao-Registro" type="submit" class="btn btn-primary">Enviar</button>
